Added notes and disabled the ability of pawns from reaching corners