@@ -1,6 +1,4 @@
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.Stack;
+import java.util.*;
 
 public class GameLogic implements PlayableLogic {
     private static final int BOARD_SIZE = 11;
@@ -10,12 +8,20 @@ public class GameLogic implements PlayableLogic {
     private final Stack<Position> undoStack = new Stack<Position>();
     private final Stack<Position> currentPosition = new Stack<Position>();
     private final Stack<Pawn_Killed> killedPieces = new Stack<Pawn_Killed>();
-    private final int[][] numOfStepsBoard = new int[BOARD_SIZE][BOARD_SIZE];
+    private static int[][] numOfStepsBoard = new int[BOARD_SIZE][BOARD_SIZE];
     private boolean firstPlayerTurn;
     private static boolean kingCaptured;
     private static boolean kingWin;
     private boolean killedApiece = false;
 
+    /*
+    Constructor for the GameLogic object which initializes all the parameters that are required in order to start
+    a game.
+    Including:
+    - Initializing pieces on board.
+    - initializing the boolean variables that say the king status (captured/win)
+    - Initializing the turns of the players. setting the second player turn first.
+     */
     public GameLogic() {
         InitialSetup();
         kingCaptured = false;
@@ -23,6 +29,10 @@ public class GameLogic implements PlayableLogic {
         kingWin = false;
     }
 
+    /*
+    A function that initializes all the pieces on board, with their starting positions.
+    The function also call other function which attach each piece to its owner (Player 1/2).
+     */
     public void InitialSetup() {
         clearPlayerPiecesArrays();
 
@@ -72,20 +82,28 @@ public class GameLogic implements PlayableLogic {
         initializeStepsBoard();
     }
 
+    /*
+    This function adds each piece on the board to its owner.
+    Each player has an array containing all of its pieces.
+     */
     private void attachPiecesToPlayer() {
         for (int i = 0; i < BOARD_SIZE; i++) {
             for (int j = 0; j < BOARD_SIZE; j++) {
                 if (_board[i][j] instanceof Pawn | _board[i][j] instanceof King) {
                     if (_board[i][j].getOwner().isPlayerOne()) {
                         _firstPlayer.addPieceToStack(_board[i][j]);
-                    } else {
+                    }
+                    else {
                         _secondPlayer.addPieceToStack(_board[i][j]);
                     }
                 }
             }
         }
     }
-
+/*
+This function clears both players arrays of pieces.
+is used in order to start a game from zero.
+ */
     private void clearPlayerPiecesArrays() {
         _firstPlayer.emptyPiecesArray();
         _secondPlayer.emptyPiecesArray();
@@ -94,7 +112,7 @@ public class GameLogic implements PlayableLogic {
     private void initializeStepsBoard() {
         for (int i = 0; i < numOfStepsBoard.length; i++) {
             for (int j = 0; j < numOfStepsBoard.length; j++) {
-                if (_board[i][j] instanceof Pawn | _board[i][j] instanceof King) {
+                if (_board[i][j] instanceof Pawn || _board[i][j] instanceof King) {
                     numOfStepsBoard[i][j]++;
                 } else {
                     numOfStepsBoard[i][j] = 0;
@@ -102,6 +120,7 @@ public class GameLogic implements PlayableLogic {
             }
         }
     }
+
 
     @Override
     public boolean move(Position a, Position b) {
@@ -117,6 +136,10 @@ public class GameLogic implements PlayableLogic {
         if (!(SpaceIsClear(a, b))) {
             return false;
         }
+        if (getPieceAtPosition(a) instanceof Pawn && Position.isCorner(b))
+        {
+            return false;
+        }
         undoStack.add(a);
         currentPosition.add(b);
         _board[a.getX()][a.getY()].setPosition(b);
@@ -130,12 +153,14 @@ public class GameLogic implements PlayableLogic {
         firstPlayerTurn = !firstPlayerTurn;
         kingWin = kingInCorner();
         if (isGameFinished()) {
-
             endGamePrints();
         }
         return true;
     }
-
+    /*
+    Each piece has an array containing the positions it stepped on.
+    This function adds a given position to the array of positions of the piece that stands on the given position.
+    */
     private void addPositionToPieceArray(Position b) {
         if (_board[b.getX()][b.getY()].getOwner().isPlayerOne()) {
             int i = 0;
@@ -152,7 +177,14 @@ public class GameLogic implements PlayableLogic {
             _secondPlayer.getPieceFromArray(j).addPositionToStack(b);
         }
     }
-
+    /*
+    This function checks if a given position is legal to move to.
+    The function checks if the position is inside the board borders and if it is not the current position (meaning,
+    there is a difference between both positions).
+    If the position is indeed inside the border and is different from the current position.
+    The function will return if that position in the border is not taken (is null).
+    The function is used to check if a given position is eligible to move to.
+     */
     public boolean legalMove(Position a, Position b) {
         if (b.getX() > BOARD_SIZE || b.getY() > BOARD_SIZE || b.getX() < 0 || b.getY() < 0) {
             return false;
@@ -162,7 +194,13 @@ public class GameLogic implements PlayableLogic {
         }
         return _board[b.getX()][b.getY()] == null;
     }
-
+    /*
+    This function checks if all cells (the road) between position 'a' to position 'b' are clear.
+    If the road is not clear, the function will return false.
+    Else, the function returns true.
+    This function is used in order to check if a given piece at position 'a' is able to move to position 'b' according
+    to the game rules.
+     */
     public boolean SpaceIsClear(Position a, Position b) {
         if (b.getY() > a.getY()) {
             for (int i = a.getY() + 1; i <= b.getY(); i++) {
@@ -194,17 +232,23 @@ public class GameLogic implements PlayableLogic {
         }
         return true;
     }
-
+    /*
+    This function returns the 'Piece' at a given position by referring to the board at that position.
+     */
     @Override
     public Piece getPieceAtPosition(Position position) {
         return _board[position.getX()][position.getY()];
     }
-
+    /*
+    This function returns the first player 'Player' object.
+     */
     @Override
     public Player getFirstPlayer() {
         return _firstPlayer;
     }
-
+    /*
+    This function returns the second player 'Player' object.
+    */
     @Override
     public Player getSecondPlayer() {
         return _secondPlayer;
@@ -222,16 +266,12 @@ public class GameLogic implements PlayableLogic {
             _firstPlayer.setWonLastGame(true);
             _secondPlayer.setWonLastGame(false);
         }
-        if (kingCaptured | kingWin) {
-            calcNumOfSteps();
-            endGamePrints();
-        }
         return kingCaptured | kingWin;
     }
 
     private void calcNumOfSteps() {
         for (int i = 0; i < _firstPlayer.getArrayLength(); i++) {
-            ArrayList<Position> firstPlayerMovesArray = removeDuplicates(_firstPlayer.getPieceFromArray(i).getMoves());
+            ArrayList<Position> firstPlayerMovesArray = new ArrayList<>(removeDuplicates(_firstPlayer.getPieceFromArray(i).getMoves()));
             for (int j = 0; j < firstPlayerMovesArray.size(); j++) {
                 int x = firstPlayerMovesArray.get(j).getX();
                 int y = firstPlayerMovesArray.get(j).getY();
@@ -239,7 +279,7 @@ public class GameLogic implements PlayableLogic {
             }
         }
         for (int i = 0; i < _secondPlayer.getArrayLength(); i++) {
-            ArrayList<Position> secondPlayerMovesArray = removeDuplicates(_secondPlayer.getPieceFromArray(i).getMoves());
+            ArrayList<Position> secondPlayerMovesArray = new ArrayList<>(removeDuplicates(_secondPlayer.getPieceFromArray(i).getMoves()));
             for (int j = 0; j < secondPlayerMovesArray.size(); j++) {
                 int x = secondPlayerMovesArray.get(j).getX();
                 int y = secondPlayerMovesArray.get(j).getY();
@@ -250,16 +290,16 @@ public class GameLogic implements PlayableLogic {
 
     private ArrayList<Position> removeDuplicates(ArrayList<Position> array) {
         ArrayList<Position> arr = new ArrayList<>();
-        arr.add(array.get(0));
+        arr.add(array.getFirst());
         boolean notDuplicant = true;
         for (int i = 1; i < array.size(); i++) {
             for (int j = 0; j < arr.size(); j++) {
-                if (arr.get(j).getX() == array.get(i).getX() && arr.get(j).getY() == array.get(i).getY()) {
+                if (arr.get(j).equal(array.get(i))) {
                     notDuplicant = false;
-                    break;
                 }
             }
-            if (notDuplicant) {
+            if (notDuplicant)
+            {
                 arr.add(array.get(i));
             }
             notDuplicant = true;
@@ -268,6 +308,7 @@ public class GameLogic implements PlayableLogic {
     }
 
     private void endGamePrints() {
+        //Q2_1
         _firstPlayer.sortAccordingToNumOfSteps();
         _secondPlayer.sortAccordingToNumOfSteps();
         if (_firstPlayer.getWonLastGame()) {
@@ -296,6 +337,7 @@ public class GameLogic implements PlayableLogic {
             }
         }
         System.out.println("***************************************************************************");
+        //Q2_2
         ArrayList<ConcretePiece> MergedPlayersArray = new ArrayList<>();
         for (int i = 0; i < _firstPlayer.getArrayLength(); i++) {
             MergedPlayersArray.add(_firstPlayer.getPieceFromArray(i));
@@ -307,10 +349,11 @@ public class GameLogic implements PlayableLogic {
         for (ConcretePiece piece : MergedPlayersArray) {
             if (piece.getNumberOfKills() > 0) {
                 System.out.print(piece.getPiecePosition() + ": ");
-                System.out.println(piece.getNumberOfKills());
+                System.out.println(piece.getNumberOfKills()+ " kills");
             }
         }
         System.out.println("***************************************************************************");
+       //Q2_3
         Q2_3Sort(MergedPlayersArray);
         for (ConcretePiece piece : MergedPlayersArray) {
             if (piece.getDistance() > 0) {
@@ -319,14 +362,13 @@ public class GameLogic implements PlayableLogic {
             }
         }
         System.out.println("***************************************************************************");
-        for (int i = 0; i < numOfStepsBoard.length; i++) {
-            for (int j = 0; j < numOfStepsBoard.length; j++) {
-                if (numOfStepsBoard[i][j] > 1) {
-                    System.out.println("(" + i + ", " + j + "): " + numOfStepsBoard[i][j] + " pieces");
-                }
-            }
+        //Q2_4
+        calcNumOfSteps();
+        ArrayList<PositionAndSteps> arr = Q2_4Sort();
+        for (int i = 0; i < arr.size(); i++) {
+            Position pos = new Position(arr.get(i).getPosition());
+            System.out.println("(" + pos.getX() + ", " + pos.getY() + "): " + getNumOfSteps(pos) + " pieces");
         }
-
     }
 
     public void Q2_2Sort(ArrayList<ConcretePiece> array) {
@@ -358,7 +400,39 @@ public class GameLogic implements PlayableLogic {
         };
         arr.sort(DistanceComp);
     }
-
+    public ArrayList<PositionAndSteps> Q2_4Sort()
+    {
+        ArrayList<PositionAndSteps> arr = new ArrayList<>();
+        for (int i = 0; i < numOfStepsBoard.length; i++) {
+            for (int j = 0; j < numOfStepsBoard.length; j++) {
+                Position pos = new Position(i,j);
+                if (getNumOfSteps(pos) > 1)
+                {
+                    arr.add(new PositionAndSteps(pos, getNumOfSteps(pos)));
+                }
+            }
+        }
+        Comparator<PositionAndSteps> comp = new Comparator<PositionAndSteps>() {
+            @Override
+            public int compare(PositionAndSteps o1, PositionAndSteps o2) {
+                if (o1.getSteps() == o2.getSteps())
+                {
+                    if (o1.getPosition().getX() == o2.getPosition().getX())
+                    {
+                        return Integer.compare(o1.getPosition().getY(), o2.getPosition().getY());
+                    }
+                    return Integer.compare(o1.getPosition().getX(), o2.getPosition().getX());
+                }
+                return -1 * Integer.compare(o1.getSteps(), o2.getSteps());
+            }
+        };
+        arr.sort(comp);
+        return arr;
+    }
+    public static int getNumOfSteps(Position p)
+    {
+        return numOfStepsBoard[p.getX()][p.getY()];
+    }
     @Override
     public boolean isSecondPlayerTurn() {
         return !firstPlayerTurn;
@@ -649,6 +723,9 @@ public class GameLogic implements PlayableLogic {
 
     @Override
     public int getBoardSize() {
+        return BOARD_SIZE;
+    }
+    public static int getBoardSizeStatic() {
         return BOARD_SIZE;
     }
 }
